// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kinetics section should render table and notes section for exceptional cases 1`] = `
<DocumentFragment>
  <protvista-datatable>
    <table>
      <thead>
        <tr>
          <th>
             KM 
          </th>
          <th>
             SUBSTRATE 
          </th>
          <th>
             pH 
          </th>
          <th>
             TEMPERATURE[C] 
          </th>
          <th>
             NOTES 
          </th>
          <th>
             EVIDENCE 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-id="row"
        >
          <td>
            0.38 mM
          </td>
          <td>
            glyoxal
          </td>
          <td>
            7.4
          </td>
          <td>
            37
          </td>
          <td />
          <td>
            <button
              aria-controls="0"
              aria-expanded="false"
              class="svg-colour-reviewed evidence-tag"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="0"
            />
          </td>
        </tr>
        <tr
          data-id="row"
        >
          <td>
            0.06 mM
          </td>
          <td>
            methylglyoxal
          </td>
          <td>
            7.4
          </td>
          <td>
            37
          </td>
          <td />
          <td>
            <button
              aria-controls="1"
              aria-expanded="false"
              class="svg-colour-reviewed evidence-tag"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="1"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </protvista-datatable>
  <section
    class="text-block"
  >
    <div
      class="text-block"
    >
      kcat is 118.44 min(-1) and 20.80 min (-1) for glyoxalase activity with glyoxal (GO) and methylglyoxal (MGO) as substrate, respectively (at pH 7.4 and 37 degrees Celsius) (PubMed:
      <a
        href="/citations/26678554"
      >
        26678554
      </a>
      )
The apparent kcat of MGO and GO degradation is 0.29 sec(-1), and 0.42 sec(-1), respectively (at 22 degrees Celsius) (PubMed:
      <a
        href="/citations/26774339"
      >
        26774339
      </a>
      ).
    </div>
  </section>
</DocumentFragment>
`;

exports[`Kinetics section should render table for Kinetics data  where two kcat values are combined within a sentence 1`] = `
<DocumentFragment>
  <protvista-datatable>
    <table>
      <thead>
        <tr>
          <th>
             Vmax 
          </th>
          <th>
             pH 
          </th>
          <th>
             TEMPERATURE[C] 
          </th>
          <th>
             NOTES 
          </th>
          <th>
             EVIDENCE 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-id="row"
        >
          <td>
            200 nmol/min/mg
          </td>
          <td />
          <td />
          <td>
            below 1 mM arsenate
          </td>
          <td>
            <button
              aria-controls="0"
              aria-expanded="false"
              class="svg-colour-reviewed evidence-tag"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="0"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </protvista-datatable>
  <protvista-datatable>
    <table>
      <thead>
        <tr>
          <th>
             kcat 
          </th>
          <th>
             pH 
          </th>
          <th>
             TEMPERATURE[C] 
          </th>
          <th>
             NOTES 
          </th>
          <th>
             EVIDENCE 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-id="row"
        >
          <td>
            4.5 min(-1)
          </td>
          <td />
          <td />
          <td>
             with arsenate as substrate  2 uM arsenate
          </td>
          <td>
            <button
              aria-controls="1"
              aria-expanded="false"
              class="svg-colour-reviewed evidence-tag"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="1"
            />
          </td>
        </tr>
        <tr
          data-id="row"
        >
          <td>
            9.9 min(-1)
          </td>
          <td />
          <td />
          <td>
             with arsenate as substrate  10 mM arsenate
          </td>
          <td>
            <button
              aria-controls="2"
              aria-expanded="false"
              class="svg-colour-reviewed evidence-tag"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="2"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </protvista-datatable>
</DocumentFragment>
`;

exports[`Kinetics section should render table for Kinetics section 1`] = `
<DocumentFragment>
  <protvista-datatable>
    <table>
      <thead>
        <tr>
          <th>
             KM 
          </th>
          <th>
             SUBSTRATE 
          </th>
          <th>
             pH 
          </th>
          <th>
             TEMPERATURE[C] 
          </th>
          <th>
             NOTES 
          </th>
          <th>
             EVIDENCE 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-id="row"
        >
          <td>
            438 μM
          </td>
          <td>
            ATP
          </td>
          <td>
            8
          </td>
          <td>
            42
          </td>
          <td>
               2 M NaCl
          </td>
          <td>
            <button
              aria-controls="0"
              aria-expanded="false"
              class="svg-colour-reviewed evidence-tag"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="0"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </protvista-datatable>
  <protvista-datatable>
    <table>
      <thead>
        <tr>
          <th>
             Vmax 
          </th>
          <th>
             pH 
          </th>
          <th>
             TEMPERATURE[C] 
          </th>
          <th>
             NOTES 
          </th>
          <th>
             EVIDENCE 
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-id="row"
        >
          <td>
            471 nmol/h/mg
          </td>
          <td>
            8
          </td>
          <td>
            42
          </td>
          <td>
            for ATPase activity    2 M NaCl
          </td>
          <td>
            <button
              aria-controls="1"
              aria-expanded="false"
              class="svg-colour-reviewed evidence-tag"
              data-testid="evidence-tag-trigger"
              type="button"
            >
              <test-file-stub
                height="12"
                width="12"
              />
              <span
                class="evidence-tag__label"
              >
                1 publication
              </span>
            </button>
            <div
              class="evidence-tag-content "
              data-testid="evidence-tag-content"
              id="1"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </protvista-datatable>
</DocumentFragment>
`;
